--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ If your plugin does not need CSS, delete this file.
 	overflow: hidden;
 }
 
-.hotkey-list-container {
+.modal-content.shortcuts-setting-tab .hotkey-list-container {
 	overflow: scroll;
 	height: 500px;
 }
