--- a/styles.css
+++ b/styles.css
@@ -251,3 +251,61 @@ If your plugin does not need CSS, delete this file.
 	overflow: scroll;
 	height: 500px;
 }
+
+.surfing-key-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.1);
+	z-index: 99999;
+	pointer-events: none;
+}
+
+.surfing-key-string {
+	position: absolute;
+	z-index: 100000;
+	pointer-events: none;
+	color: var(--text-on-accent);
+	font-size: var(--font-ui-small);
+	background-color: var(--interactive-accent);
+	padding: var(--size-2-1) var(--size-2-2);
+	border-radius: var(--radius-s);
+	font-weight: 500;
+	box-shadow: var(--shadow-s);
+	width: auto;
+	margin-right: var(--size-2-1);
+}
+
+.surfing-key-string-active {
+	background-color: hsl(
+		var(--accent-h),
+		var(--accent-s),
+		var(--accent-l),
+		0.8
+	);
+	color: var(--color-primary);
+}
+
+#inputDisplay {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	color: var(--color-base-90);
+	font-size: var(--size-4-8);
+	z-index: 100001;
+}
+
+span.shortcuts-logo svg {
+	width: 14px;
+}
+
+span.shortcuts-logo {
+	display: inline-flex;
+	align-items: center;
+	vertical-align: middle;
+	margin-left: var(--size-2-2);
+	color: var(--color-accent);
+}
